--- a/docker/Dockerfile-python
+++ b/docker/Dockerfile-python
@@ -10,8 +10,9 @@ COPY requirements.txt .
 # Install dependencies
 RUN pip install -r requirements.txt
 
-# Copy application code
-COPY . .
+COPY scripts/ scripts/
+COPY data/ data/
+COPY .env .env
 
 # Expose application port
 EXPOSE 5000
