ci: modify and fix config errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: docker/Dockerfile-hadoop
     container_name: hadoop
     ports:
-      - "50070:50070"
+      - "50071:50071"
       - "8020:8020"
 
   spark:
@@ -25,15 +25,12 @@ services:
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./docker/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
-      - ./docker/create_views.sql:/docker-entrypoint-initdb.d/create_views.sql
+      - ./docker/1_init_db.sql:/docker-entrypoint-initdb.d/1_init_db.sql
+      - ./docker/2_create_views.sql:/docker-entrypoint-initdb.d/2_create_views.sql
 
   python-app:
     build:
