--- a/docker/Dockerfile-hadoop
+++ b/docker/Dockerfile-hadoop
@@ -4,6 +4,7 @@ FROM ubuntu:20.04
 # Set environment variables
 ENV HADOOP_VERSION=3.3.6
 ENV HADOOP_HOME=/opt/hadoop
+ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 
 # Install dependencies
 RUN apt-get update && \
