--- a/docker/Dockerfile-hadoop
+++ b/docker/Dockerfile-hadoop
@@ -4,21 +4,26 @@ FROM ubuntu:20.04
 # Set environment variables
 ENV HADOOP_VERSION=3.3.6
 ENV HADOOP_HOME=/opt/hadoop
-ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 
 # Install dependencies
 RUN apt-get update && \
-    apt-get install -y openjdk-8-jdk wget && \
+    apt-get install -y openjdk-8-jdk-headless wget && \
     wget https://dlcdn.apache.org/hadoop/common/hadoop-$HADOOP_VERSION/hadoop-$HADOOP_VERSION.tar.gz && \
     tar -xzvf hadoop-$HADOOP_VERSION.tar.gz -C /opt && \
     mv /opt/hadoop-$HADOOP_VERSION $HADOOP_HOME && \
     rm hadoop-$HADOOP_VERSION.tar.gz
 
+# Copy the entrypoint script
+COPY docker/entrypoint.sh /entrypoint.sh
+
+# Ensure the entrypoint script is executable
+RUN chmod +x /entrypoint.sh
+
 # Set environment variables for Hadoop
 ENV PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
 
 # Expose HDFS ports
-EXPOSE 50071 50075 50010 8020 9000
+EXPOSE 50075 50010 8020 9000
 
-# Start Hadoop services
-CMD ["sh", "-c", "start-dfs.sh && tail -f /dev/null"]
+# Set the entrypoint
+ENTRYPOINT ["/entrypoint.sh"]
