--- a/docker/Dockerfile-spark
+++ b/docker/Dockerfile-spark
@@ -1,6 +1,11 @@
 # Base image
 FROM openjdk:8-jdk-slim
 
+# Install procps to provide the ps command
+RUN apt-get update && \
+    apt-get install -y wget procps && \
+    apt-get clean
+
 # Set environment variables
 ENV SPARK_VERSION=3.1.2
 ENV HADOOP_VERSION=3.2
@@ -16,6 +21,9 @@ RUN apt-get update && \
 
 # Set environment variables for Spark
 ENV PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin
+
+# Copy MySQL Connector/J JAR file into the container
+COPY docker/mysql-connector/mysql-connector-j-8.0.33.tar.gz $SPARK_HOME/jars/mysql-connector-j-8.0.33.tar.gz
 
 # Expose Spark ports
 EXPOSE 4040 7077 8080 18080
