--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,15 @@ services:
       dockerfile: docker/Dockerfile-hadoop
     container_name: hadoop
     ports:
-      - "50071:50071"
+      - "9000:9000"
       - "8020:8020"
     environment:
       - HADOOP_VERSION=3.3.6
       - HADOOP_HOME=/opt/hadoop
       - JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
+      - HDFS_NAMENODE_USER=${HDFS_NAMENODE_USER}
+      - HDFS_DATANODE_USER=${HDFS_DATANODE_USER}
+      - HDFS_SECONDARYNAMENODE_USER=${HDFS_SECONDARYNAMENODE_USER}
 
   spark:
     build:
