--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,7 @@ cython_debug/
 
 # Test files
 scripts/python/test.py
+documents/~$ocess-steps.docx
 
 # Jar/Zip files
-docker/mysql-connector/mysql-connector-j-8.0.33.tar.gz
+docker/mysql-connector/mysql-connector-j-8.0.33.jar
