--- a/docker/Dockerfile-python
+++ b/docker/Dockerfile-python
@@ -4,6 +4,22 @@ FROM python:3.9-slim
 # Set the working directory in the container
 WORKDIR /app
 
+# Install required packages
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends wget procps && \
+    apt-get clean && \
+    mkdir -p /usr/share/man/man1 && \
+    mkdir -p /usr/lib/jvm && \
+    wget -qO- https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz | tar xz -C /usr/lib/jvm && \
+    update-alternatives --install /usr/bin/java java /usr/lib/jvm/jdk-11.0.2/bin/java 100 && \
+    update-alternatives --install /usr/bin/javac javac /usr/lib/jvm/jdk-11.0.2/bin/javac 100
+
+# Set JAVA_HOME environment variable
+ENV JAVA_HOME=/usr/lib/jvm/jdk-11.0.2
+
+# Copy MySQL connector JAR file into the container
+COPY docker/mysql-connector/mysql-connector-j-8.0.33.jar /usr/local/spark/jars/
+
 # Copy the requirements file into the container at /app
 COPY requirements.txt .
 
