--- a/docker/Dockerfile-spark
+++ b/docker/Dockerfile-spark
@@ -23,7 +23,7 @@ RUN apt-get update && \
 ENV PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin
 
 # Copy MySQL Connector/J JAR file into the container
-COPY docker/mysql-connector/mysql-connector-j-8.0.33.tar.gz $SPARK_HOME/jars/mysql-connector-j-8.0.33.tar.gz
+COPY docker/mysql-connector/mysql-connector-j-8.0.33.jar $SPARK_HOME/jars/mysql-connector-j-8.0.33.jar
 
 # Expose Spark ports
 EXPOSE 4040 7077 8080 18080
